[INLONG-10395][Manager] Add interface for schedule client and engine (#10397)
* [INLONG-10395][Manager] Add interface for schedule client and engine

--- a/inlong-manager/pom.xml
+++ b/inlong-manager/pom.xml
@@ -41,6 +41,7 @@
         <module>manager-workflow</module>
         <module>manager-web</module>
         <module>manager-docker</module>
+        <module>manager-schedule</module>
     </modules>
 
     <properties>
