[INLONG-10360][Manager] Combine schedule state transition with group operations (#10445)
Co-authored-by: fuweng11 <76141879+fuweng11@users.noreply.github.com>

--- a/inlong-manager/manager-web/src/main/resources/application-dev.properties
+++ b/inlong-manager/manager-web/src/main/resources/application-dev.properties
@@ -99,3 +99,7 @@ cls.manager.endpoint=127.0.0.1
 
 manager.url=127.0.0.1:8083
 agent.install.path=
+
+# schedule engine type
+# support none(no scheduler) and quartz(quartz scheduler), default is none
+inlong.schedule.engine=none
